--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "21.1.0"
-  }  
+  },
+  "dependencies": {
+    "babel-core": "^6.26.3"
+  }
 }
